# st2api/st2api/controllers/openapi.yaml
@@ -1219,6 +1219,84 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
+  /webhooks:
+    get:
+      operationId: st2api.controllers.v1.webhooks:webhooks_controller.get_all
+      description: Returns a list of all webhooks.
+      responses:
+        '200':
+          description: List of webhooks
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Webhook'
+          examples:
+            application/json:
+              ref: 'core.local'
+              # and stuff
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+  /webhooks/{hook:.*?}:
+    post:
+      operationId: st2api.controllers.v1.webhooks:webhooks_controller.post
+      x-permissions: webhook_send
+      description: |
+        Trigger a webhook.
+      parameters:
+        - name: hook
+          in: path
+          description: Webhook path
+          type: string
+          required: true
+        - name: body
+          in: body
+          description: Webhook payload
+          schema:
+            $ref: '#/definitions/WebhookBody'
+      x-parameters:
+        - name: headers
+          in: request
+          description: List of headers attached to the request.
+      responses:
+        '201':
+          description: Single action being created
+          schema:
+            $ref: '#/definitions/WebhookBody'
+          examples:
+            application/json:
+              ref: 'core.local'
+              # and stuff
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+  /webhooks/{name}:
+    get:
+      operationId: st2api.controllers.v1.actions:actions_controller.get_one
+      x-permissions: action_view
+      description: |
+        Get one action.
+      parameters:
+        - name: name
+          in: path
+          description: Entity reference or id
+          type: string
+          required: true
+      responses:
+        '200':
+          description: Action requested
+          schema:
+            $ref: '#/definitions/Action'
+          examples:
+            application/json:
+              ref: 'core.local'
+              # and stuff
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
 
 definitions:
   Action:
@@ -1467,6 +1545,10 @@ definitions:
     additionalProperties: False
     required:
       - action
+  Webhook:
+    type: object
+  WebhookBody:
+    description: Given support of Content-Type header, that could be anything.
   ActionParametersSubSchema:
     type: object
     description: Input parameters for the action.
